--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.besant.webapp</groupId>
   <artifactId>java_web_project</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0</version>
   <name>java_web_project Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
